# deq

./: DeQ-v0.9.2.apk  README.md  Recommendations.md  SECURITY_ISSUES.md  coverage_analysis_report.md  deq_server_coverage_analysis.md  discussion-points.md  install.sh  pyproject.toml  server.py  test_coverage_analysis.md  test_coverage_summary.md  test_server_analysis.md
community extensions/: deq-ressource-usage.py
example-extensions/: container_status.py  container_updates.py  dashboard.py  overview.py  weather.py
tests/: conftest.py  test_authentication.py  test_comprehensive.py  test_comprehensive2.py  test_coverage.py  test_file_operations.py  test_helpers.py  test_pure_functions.py  test_security.py  test_server.py  test_server_new.py  test_server_new.py.stub  test_task_scheduling.py
